--- a/.env
+++ b/.env
@@ -1,6 +1,5 @@
 smtp_server =smtp.gmail.com
 smtp_port =587
-sender_email =django.testcase1@gmail.com
-sender_password =tlpyhwpbrqnyecjf
-recipient_email =django.testcase2@gmail.com
-
+sender_email = # Fill in the sender's email address
+sender_password = # Use the password you generated from Google 2FA
+recipient_email = # Fill in the recipient's email address
